--- a/_config.yml
+++ b/_config.yml
@@ -2,4 +2,7 @@ name: François de Campredon
 permalink: /:year/:month/:title/
 pygments: true
 markdown: redcarpet
+paginate: 5
+paginate_path: page/:num/
+
 excerpt_separator: '#&&&#' 
